--- a/lang/wpucloudflare-fr_FR.po
+++ b/lang/wpucloudflare-fr_FR.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: WPU Cloudflare\n"
-"POT-Creation-Date: 2019-05-19 21:30+0200\n"
+"POT-Creation-Date: 2019-05-20 20:25+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Darklg <darklg.blog@gmail.com>\n"
 "Language-Team: \n"
@@ -27,11 +27,11 @@ msgstr ""
 
 #: .././inc/WPUBaseSettings/WPUBaseSettings.php:159
 msgid "No"
-msgstr ""
+msgstr "Non"
 
 #: .././inc/WPUBaseSettings/WPUBaseSettings.php:159
 msgid "Yes"
-msgstr ""
+msgstr "Oui"
 
 #: .././inc/WPUBaseSettings/WPUBaseSettings.php:283
 msgid "Settings saved."
